--- a/projects.html
+++ b/projects.html
@@ -7,20 +7,27 @@
   </head>
   <body>
     <nav>
-      <input type="checkbox" id="menu-toggle" />
+      <button class="hamburger" aria-label="Toggle menu">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
 
-      <label for="menu-toggle" class="hamburger">
-        <span></span>
-        <span></span>
-        <span></span>
-      </label>
-
-      <div class="nav-links">
+      <div id="main-menu" class="nav-links">
         <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="projects.html" class="active">Projects</a>
+        <a href="#about.html">About</a>
+        <a href="#projects.html" class="active">Projects</a>
       </div>
     </nav>
+
+    <script>
+      const hamburger = document.querySelector(".hamburger");
+      const navLinks = document.querySelector(".nav-links");
+
+      hamburger.addEventListener("click", () => {
+        navLinks.classList.toggle("open");
+      });
+    </script>
 
     <div class="container">
       <h1>Projects</h1>
