--- a/projects.html
+++ b/projects.html
@@ -16,8 +16,8 @@
 
       <div id="main-menu" class="nav-links">
         <a href="index.html">Home</a>
-        <a href="#about.html">About</a>
-        <a href="#projects.html" class="active">Projects</a>
+        <a href="about.html">About</a>
+        <a href="projects.html" class="active">Projects</a>
       </div>
     </nav>
 
@@ -282,3 +282,4 @@
     <footer>© 2025 Kunal Soni</footer>
   </body>
 </html>
+
