-changed the tagline

--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
         </div>
 
         <p class="tagline">
-          Driven to build scalable, automated, and human-centric products at
-          scale.
+          Driven to build scalable, automated, and human-centric products.
         </p>
 
         <div class="cta">
@@ -77,6 +76,7 @@
     <footer>© 2025 Kunal Soni</footer>
   </body>
 </html>
+
 
 
 
