--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
         Outside of my professional pursuits, I stay active and intellectually
         engaged through a diverse set of interests. I enjoy playing cricket,
         swimming, and working out at the gym, activities that help me maintain
-        discipline and fitness and keep me in shape. I am also an avid reader
+        discipline and fitness and keep me in shape. I am an avid reader
         with a strong interest in science fiction and finance. I am particularly
         drawn to ideas that explore the future, technology, and ethics. Philip
         K. Dick and Isaac Asimov are two science fiction authors whom I admire.
@@ -68,3 +68,4 @@
     <footer>© 2025 Kunal Soni</footer>
   </body>
 </html>
+
