--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
         discipline and fitness and keep me in shape. I am an avid reader
         with a strong interest in science fiction and finance. I am particularly
         drawn to ideas that explore the future, technology, and ethics. Philip
-        K. Dick and Isaac Asimov are two science fiction authors whom I admire.
+        K. Dick and Isaac Asimov are two science fiction authors whom I resonate with and admire.
         I also have a keen interest in quantitative finance, especially inspired
         by the time-tested principles of value investing advocated by Warren
         Buffett and Benjamin Graham. Additionally, I love to travel and meet new
@@ -68,4 +68,5 @@
     <footer>© 2025 Kunal Soni</footer>
   </body>
 </html>
+
 
