--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
         I also have a keen interest in quantitative finance, especially inspired
         by the time-tested principles of value investing advocated by Warren
         Buffett and Benjamin Graham. Additionally, I love to travel and meet new
-        people, learning about their cultures, cuisines, and lived experiences —
+        people to learn about their cultures, cuisines, and lived experiences —
         an approach that continually enriches me and shapes my perspective on
         life.
       </p>
@@ -68,5 +68,6 @@
     <footer>© 2025 Kunal Soni</footer>
   </body>
 </html>
+
 
 
