--- a/about.html
+++ b/about.html
@@ -53,10 +53,10 @@
         engaged through a diverse set of interests. I enjoy playing cricket,
         swimming, and working out at the gym, activities that help me maintain
         discipline and fitness and keep me in shape. I am an avid reader
-        with a strong interest in science fiction and finance. I am particularly
+        with a strong interest in science fiction and finance. I am especially
         drawn to ideas that explore the future, technology, and ethics. Philip
         K. Dick and Isaac Asimov are two science fiction authors whom I resonate with and admire.
-        I also have a keen interest in quantitative finance, especially inspired
+        I also have a keen interest in quantitative finance, particularly inspired
         by the time-tested principles of value investing advocated by Warren
         Buffett and Benjamin Graham. Additionally, I love to travel and meet new
         people to learn about their cultures, cuisines, and lived experiences —
@@ -68,6 +68,7 @@
     <footer>© 2025 Kunal Soni</footer>
   </body>
 </html>
+
 
 
 
