added consistent font sizing

--- a/about.html
+++ b/about.html
@@ -8,16 +8,18 @@
   </head>
   <body>
     <nav>
-      <button class="hamburger" aria-label="Toggle menu">
-        <span></span>
-        <span></span>
-        <span></span>
-      </button>
+      <div class="nav-inner">
+        <button class="hamburger" aria-label="Toggle menu">
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
 
-      <div id="main-menu" class="nav-links">
-        <a href="index.html">Home</a>
-        <a href="about.html" class="active">About</a>
-        <a href="projects.html">Projects</a>
+        <div class="nav-links">
+          <a href="index.html">Home</a>
+          <a href="about.html" class="active">About</a>
+          <a href="projects.html">Projects</a>
+        </div>
       </div>
     </nav>
 
@@ -52,23 +54,19 @@
         Outside of my professional pursuits, I stay active and intellectually
         engaged through a diverse set of interests. I enjoy playing cricket,
         swimming, and working out at the gym, activities that help me maintain
-        discipline and fitness and keep me in shape. I am an avid reader
-        with a strong interest in science fiction and finance. I am especially
-        drawn to ideas that explore the future, technology, and ethics. Philip
-        K. Dick and Isaac Asimov are two science fiction authors whom I resonate with and admire.
-        I also have a keen interest in quantitative finance, particularly inspired
-        by the time-tested principles of value investing advocated by Warren
-        Buffett and Benjamin Graham. Additionally, I love to travel and meet new
-        people to learn about their cultures, cuisines, and lived experiences —
-        an approach that continually enriches me and shapes my perspective on
-        life.
+        discipline and fitness and keep me in shape. I am an avid reader with a
+        strong interest in science fiction and finance. I am especially drawn to
+        ideas that explore the future, technology, and ethics. Philip K. Dick
+        and Isaac Asimov are two science fiction authors whom I resonate with
+        and admire. I also have a keen interest in quantitative finance,
+        particularly inspired by the time-tested principles of value investing
+        advocated by Warren Buffett and Benjamin Graham. Additionally, I love to
+        travel and meet new people to learn about their cultures, cuisines, and
+        lived experiences — an approach that continually enriches me and shapes
+        my perspective on life.
       </p>
     </div>
 
-    <footer>© 2025 Kunal Soni</footer>
+    <footer>© 2025 kunalpop</footer>
   </body>
 </html>
-
-
-
-
