--- a/index.html
+++ b/index.html
@@ -5,19 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home | Kunal Soni</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    />
   </head>
   <body>
     <nav>
-      <button class="hamburger" aria-label="Toggle menu">
-        <span></span>
-        <span></span>
-        <span></span>
-      </button>
+      <div class="nav-inner">
+        <button class="hamburger" aria-label="Toggle menu">
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
 
-      <div class="nav-links">
-        <a href="index.html" class="active">Home</a>
-        <a href="about.html">About</a>
-        <a href="projects.html">Projects</a>
+        <div class="nav-links">
+          <a href="index.html" class="active">Home</a>
+          <a href="about.html">About</a>
+          <a href="projects.html">Projects</a>
+        </div>
       </div>
     </nav>
 
@@ -41,25 +47,39 @@
         </h2>
 
         <div class="social-links">
-          <!-- Replace # with your actual profile URLs -->
-          <a href="https://www.linkedin.com/in/sonikunal7" target="_blank"
-            >LinkedIn</a
+          <a
+            href="https://www.linkedin.com/in/sonikunal7"
+            aria-label="LinkedIn"
           >
-          <a href="https://github.com/kunalpop" target="_blank">GitHub</a>
-          <a href="https://x.com/kunalpop" target="_blank">X</a>
-          <a href="https://www.facebook.com/your-facebook" target="_blank"
-            >Facebook</a
+            <i class="fa-brands fa-linkedin"></i>
+          </a>
+
+          <a href="https://github.com/kunalpop" aria-label="GitHub">
+            <i class="fa-brands fa-github"></i>
+          </a>
+
+          <a href="https://x.com/kunalpop" aria-label="X (Twitter)">
+            <i class="fa-brands fa-x-twitter"></i>
+          </a>
+
+          <a
+            href="https://www.facebook.com/your-facebook"
+            aria-label="Facebook"
           >
+            <i class="fa-brands fa-facebook"></i>
+          </a>
         </div>
 
         <p class="tagline">
           Driven to build scalable, automated, and human-centric products.
         </p>
 
+        <!--
         <div class="cta">
           <a href="about.html">About Me</a>
           <a href="projects.html">Projects</a>
         </div>
+        -->
 
         <!--
         <div class="quote">
@@ -72,12 +92,7 @@
         -->
       </div>
     </div>
-    
-    <footer>© 2025 Kunal Soni</footer>
+
+    <footer>© 2025 kunalpop</footer>
   </body>
 </html>
-
-
-
-
-
