--- a/projects.html
+++ b/projects.html
@@ -8,16 +8,18 @@
   </head>
   <body>
     <nav>
-      <button class="hamburger" aria-label="Toggle menu">
-        <span></span>
-        <span></span>
-        <span></span>
-      </button>
+      <div class="nav-inner">
+        <button class="hamburger" aria-label="Toggle menu">
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
 
-      <div id="main-menu" class="nav-links">
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="projects.html" class="active">Projects</a>
+        <div class="nav-links">
+          <a href="index.html">Home</a>
+          <a href="about.html">About</a>
+          <a href="projects.html" class="active">Projects</a>
+        </div>
       </div>
     </nav>
 
@@ -279,7 +281,6 @@
       </div>
     </div>
 
-    <footer>© 2025 Kunal Soni</footer>
+    <footer>© 2025 kunalpop</footer>
   </body>
 </html>
-
