--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
         <div class="nav-links">
           <a href="index.html">Home</a>
           <a href="about.html" class="active">About</a>
-          <a href="projects.html">Projects</a>
+          <a href="portfolio.html">Portfolio</a>
         </div>
       </div>
     </nav>
