--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="nav-links">
           <a href="index.html" class="active">Home</a>
           <a href="about.html">About</a>
-          <a href="projects.html">Projects</a>
+          <a href="portfolio.html">Portfolio</a>
         </div>
       </div>
     </nav>
