added wechat functionality

--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
           >
             <i class="fa-brands fa-facebook"></i>
           </a>
+
+          <a href="wechat.html" aria-label="WeChat">
+            <i class="fa-brands fa-weixin"></i>
+          </a>
         </div>
 
         <!--
