--- a/wechat.html
+++ b/wechat.html
@@ -44,7 +44,7 @@
   </head>
   <body>
     <div class="qr-container">
-      <h1>通过微信联系我</h1>
+      <h1>加我微信</h1>
       <h1>Connect with me on WeChat</h1>
       <img src="images/wechat-qr.png" alt="WeChat QR Code" />
       <p>Scan this QR code using WeChat</p>
