added data exploration and cleaning

--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,10 @@
               customer support, knowledge management, legal and financial
               information extraction, and public information system.
             </p>
-            <p><strong>Tech:</strong> Python, Fine-tuning, Transfer Learning</p>
+            <p>
+              <strong>Tech:</strong> Python, Data Cleaning, Fine-tuning,
+              Transfer Learning
+            </p>
             <p>
               <strong>Management:</strong> team meetings, presentation,
               documentation
@@ -207,8 +210,8 @@
               surgeons traveling across multiple hospitals in a day.
             </p>
             <p>
-              <strong>Tech:</strong> Python, Vehicle Routing (TSP), Dijkstra’s
-              Algorithm, Heuristic
+              <strong>Tech:</strong> Python, Data Cleaning, Vehicle Routing
+              (TSP), Dijkstra’s Algorithm, Heuristic
             </p>
           </div>
         </div>
@@ -240,9 +243,9 @@
               and sales.
             </p>
             <p>
-              <strong>Tech:</strong> R, Feature Engineering, Content Filtering,
-              Collaborative Filtering, Hierarchical Clustering, CART, Random
-              Forest, Time Weighting, SQL
+              <strong>Tech:</strong> R, EXploratory Data Analysis, Feature
+              Engineering, Content Filtering, Collaborative Filtering,
+              Hierarchical Clustering, CART, Random Forest, Time Weighting, SQL
             </p>
           </div>
         </div>
@@ -273,8 +276,9 @@
               maintenance and reducing unplanned downtime.
             </p>
             <p>
-              <strong>Tech:</strong> Python, Machine Learning, Deep Learning,
-              Data Engineering, Feature Engineering, Bayesian Fusion
+              <strong>Tech:</strong> Python, Exploratory Data Analysis, Machine
+              Learning, Deep Learning, Data Engineering, Feature Engineering,
+              Bayesian Fusion
             </p>
           </div>
         </div>
