--- a/portfolio.html
+++ b/portfolio.html
@@ -243,7 +243,7 @@
               and sales.
             </p>
             <p>
-              <strong>Tech:</strong> R, EXploratory Data Analysis, Feature
+              <strong>Tech:</strong> R, Exploratory Data Analysis, Feature
               Engineering, Content Filtering, Collaborative Filtering,
               Hierarchical Clustering, CART, Random Forest, Time Weighting, SQL
             </p>
