add FB link to profile

--- a/index.html
+++ b/index.html
@@ -66,10 +66,7 @@
             <i class="fa-brands fa-x-twitter"></i>
           </a>
 
-          <a
-            href="https://www.facebook.com/your-facebook"
-            aria-label="Facebook"
-          >
+          <a href="https://www.facebook.com/kunalpop25" aria-label="Facebook">
             <i class="fa-brands fa-facebook"></i>
           </a>
 
