-added details on geocoding and reframed the gas turbine project

--- a/portfolio.html
+++ b/portfolio.html
@@ -211,7 +211,7 @@
             </p>
             <p>
               <strong>Tech:</strong> Python, Data Cleaning, Vehicle Routing
-              (TSP), Dijkstra’s Algorithm, Heuristic
+              (TSP-Dijkstra’s Algorithm), Geocoding, Heuristic, MongoDB
             </p>
           </div>
         </div>
@@ -272,13 +272,14 @@
           <div class="project-right-card">
             <p>
               Built a predictive analytics model to anticipate valve trip events
-              in gas turbines using machine learning, enabling proactive
-              maintenance and reducing unplanned downtime.
+              in gas turbines using machine learning and deep learning, enabling
+              proactive maintenance and reducing unplanned downtime, and thus
+              preventing critical damage to turbines.
             </p>
             <p>
-              <strong>Tech:</strong> Python, Exploratory Data Analysis, Machine
-              Learning, Deep Learning, Data Engineering, Feature Engineering,
-              Bayesian Fusion
+              <strong>Tech:</strong> Python, SQL, Exploratory Data Analysis,
+              Machine Learning, Deep Learning, Data Engineering, Feature
+              Engineering, Bayesian Fusion
             </p>
           </div>
         </div>
