added microservices in description

--- a/portfolio.html
+++ b/portfolio.html
@@ -138,7 +138,7 @@
             </p>
             <p>
               <strong>Tech:</strong> ReactJs, NestJS, PostgreSQL, Redis, Docker,
-              Grafana, Microsoft Azure, software architecture, database design
+              Grafana, Microsoft Azure, software architecture, database design, microservices
             </p>
             <p>
               <strong>Management:</strong> Scrum, JIRA, project management,
@@ -174,7 +174,7 @@
             </p>
             <p>
               <strong>Tech:</strong> NestJS, PostgreSQL, MongoDB, Amazon Web
-              Services
+              Services, microservices, RabbitMQ
             </p>
             <p>
               <strong>Management:</strong> Scrum, JIRA, project management,
