added social media links and modified description

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -37,7 +37,7 @@
     </script>
 
     <div class="container">
-      <h1>Welcome to My Website!</h1>
+      <h1>Welcome!</h1>
       <div class="profile">
         <img src="images/profile.jpg" alt="Kunal Soni" />
 
@@ -62,16 +62,20 @@
             <i class="fa-brands fa-github"></i>
           </a>
 
+          <a href="wechat.html" aria-label="WeChat">
+            <i class="fa-brands fa-weixin"></i>
+          </a>
+
+          <a href="https://t.me/kunasoni" aria-label="Telegram">
+            <i class="fa-brands fa-telegram"></i>
+          </a>
+
           <a href="https://x.com/kunalpop" aria-label="X (Twitter)">
             <i class="fa-brands fa-x-twitter"></i>
           </a>
 
           <a href="https://www.facebook.com/kunalpop25" aria-label="Facebook">
             <i class="fa-brands fa-facebook"></i>
-          </a>
-
-          <a href="wechat.html" aria-label="WeChat">
-            <i class="fa-brands fa-weixin"></i>
           </a>
         </div>
 
