--- a/portfolio.html
+++ b/portfolio.html
@@ -243,7 +243,7 @@
               and sales.
             </p>
             <p>
-              <strong>Tech:</strong> R, Exploratory Data Analysis, Feature
+              <strong>Tech:</strong> R, Exploratory Data Analysis, Data Preprocessing, Feature
               Engineering, Content Filtering, Collaborative Filtering,
               Hierarchical Clustering, CART, Random Forest, Time Weighting, SQL
             </p>
@@ -278,7 +278,7 @@
             </p>
             <p>
               <strong>Tech:</strong> Python, SQL, Exploratory Data Analysis,
-              Machine Learning, Deep Learning, Data Engineering, Feature
+              Data Preprocessing, Machine Learning, Deep Learning, Data Engineering, Feature
               Engineering, Bayesian Fusion
             </p>
           </div>
