cricket to Cricket

--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -52,7 +52,7 @@
 
       <p>
         Outside of my professional pursuits, I stay active and intellectually
-        engaged through a diverse set of interests. I enjoy playing cricket,
+        engaged through a diverse set of interests. I enjoy playing Cricket,
         swimming, and working out at the gym, activities that help me maintain
         discipline and fitness and keep me in shape. I am an avid reader with a
         strong interest in science fiction and finance. I am especially drawn to
