aligned hamburger menu, added name on nav bar, added color transitioning

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
           <a href="about.html">About</a>
           <a href="portfolio.html">Portfolio</a>
         </div>
+        <div class="nav-name">Kunal Soni</div>
       </div>
     </nav>
 
@@ -37,11 +38,11 @@
     </script>
 
     <div class="container">
-      <h1>Welcome!</h1>
+      <h1></h1>
       <div class="profile">
         <img src="images/profile.jpg" alt="Kunal Soni" />
 
-        <h1>Kunal Soni | 金士俊</h1>
+        <h1>Kunal Soni</h1>
         <h2>
           Product Engineer | ML Engineer | Software Engineer | AI Professional
         </h2>
