--- a/portfolio.html
+++ b/portfolio.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -20,6 +20,7 @@
           <a href="about.html">About</a>
           <a href="portfolio.html" class="active">Portfolio</a>
         </div>
+        <div class="nav-name">Kunal Soni</div>
       </div>
     </nav>
 
@@ -138,7 +139,8 @@
             </p>
             <p>
               <strong>Tech:</strong> ReactJs, NestJS, PostgreSQL, Redis, Docker,
-              Grafana, Microsoft Azure, software architecture, database design, microservices
+              Grafana, Microsoft Azure, software architecture, database design,
+              microservices
             </p>
             <p>
               <strong>Management:</strong> Scrum, JIRA, project management,
@@ -243,9 +245,10 @@
               and sales.
             </p>
             <p>
-              <strong>Tech:</strong> R, Exploratory Data Analysis, Data Preprocessing, Feature
-              Engineering, Content Filtering, Collaborative Filtering,
-              Hierarchical Clustering, CART, Random Forest, Time Weighting, SQL
+              <strong>Tech:</strong> R, Exploratory Data Analysis, Data
+              Preprocessing, Feature Engineering, Content Filtering,
+              Collaborative Filtering, Hierarchical Clustering, CART, Random
+              Forest, Time Weighting, SQL
             </p>
           </div>
         </div>
@@ -278,8 +281,8 @@
             </p>
             <p>
               <strong>Tech:</strong> Python, SQL, Exploratory Data Analysis,
-              Data Preprocessing, Machine Learning, Deep Learning, Data Engineering, Feature
-              Engineering, Bayesian Fusion
+              Data Preprocessing, Machine Learning, Deep Learning, Data
+              Engineering, Feature Engineering, Bayesian Fusion
             </p>
           </div>
         </div>
