--- a/about.html
+++ b/about.html
@@ -20,6 +20,7 @@
           <a href="about.html" class="active">About</a>
           <a href="portfolio.html">Portfolio</a>
         </div>
+        <div class="nav-name">Kunal Soni</div>
       </div>
     </nav>
 
@@ -56,9 +57,9 @@
         swimming, and working out at the gym, activities that help me maintain
         discipline and fitness and keep me in shape. I am an avid reader with a
         strong interest in science fiction and finance. I am especially drawn to
-        ideas that explore the future, technology, and ethics. Philip K. Dick
-        and Isaac Asimov are two science fiction authors whom I resonate with
-        and admire. I also have a keen interest in quantitative finance,
+        ideas that explore the future, technology, and ethics. I resonate with
+        and admire the works of science fiction authors Philip K. Dick and Isaac
+        Asimov. I also have a keen interest in quantitative finance,
         particularly inspired by the time-tested principles of value investing
         advocated by Warren Buffett and Benjamin Graham. Additionally, I love to
         travel and meet new people to learn about their cultures, cuisines, and
